--- a/SharpEngine.csproj
+++ b/SharpEngine.csproj
@@ -20,10 +20,13 @@
     <None Update="libglfw.dylib">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Shaders\red-triangle.vert.glsl">
+    <None Update="Shaders\screen-coordinates.vert.glsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Shaders\red-triangle.frag">
+    <None Update="Shaders\red.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Shaders\green.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
